# AnimaI_0.3.1

./: .gitignore  Cargo.toml  README.md  app.js  build.bat  index.html  start.bat  style.css
.github/workflows/: release.yml
csv/: accessories.csv  art_style.csv  background.csv  clothing_fantasy.csv  clothing_real.csv  effect.csv  expression.csv  hair.csv  my_custom_weapons.csv  n_accessories.csv  n_body_type.csv  n_expression.csv  n_nsfw.csv  n_pose.csv  n_situation.csv  negative_prompt.csv  pose.csv  quality.csv  situation.csv  subject.csv
favorites/: sample.json
macos/: README.md  app.js  index.html  prompts-data.js  style.css
src/: main.rs
