[package]
name = "animai"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7.4"
rust-embed = { version = "8.2.0", features = ["interpolate-folder-path", "include-exclude"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webbrowser = "1.0.1"
mime_guess = "2.0.4"
walkdir = "2.4.0"
